force-app/main/default/objects/SPV_Formulario__c/SPV_Formulario__c.object-meta.xml
<CustomObject>
    <description>Representa un formulario asociado a una reclamación en supervisores.</description>
    <label>Formulario</label>
    <nameField>
        <displayFormat>FC-{0000000}</displayFormat>
        <label>Formulario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formularios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>