force-app/main/default/objects/SPV_Formulario__c/fields/SAC_Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo_Documento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Documento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>