force-app/main/default/objects/SPV_Formulario__c/fields/SPV_CambiosDeCondiciones__c.field-meta.xml
<CustomField>
    <fullName>SPV_CambiosDeCondiciones__c</fullName>
    <description>Campo texto que indica las comunicaciones cambios de condiciones del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunicaciones cambios de condiciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>