force-app/main/default/objects/SPV_Formulario__c/fields/SPV_Caso__c.field-meta.xml
<CustomField>
    <fullName>SPV_Caso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Caso (Reclamación) a el que pertenece este formulario.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Formularios</relationshipLabel>
    <relationshipName>Formularios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>