force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ComunicacionLiquidaciones__c.field-meta.xml
<CustomField>
    <fullName>SPV_ComunicacionLiquidaciones__c</fullName>
    <description>Campo texto que indica las comunicaciones con liquidaciones, extractos, recibos del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comunicaciones con liquidaciones, extractos, recibos...</inlineHelpText>
    <label>Comunicaciones con liquidaciones...</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>