force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ComunicacionOficinaCliente__c.field-meta.xml
<CustomField>
    <fullName>SPV_ComunicacionOficinaCliente__c</fullName>
    <description>Campo texto que indica las comunicaciones entre oficina y cliente del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunicaciones entre oficina y cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>