force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ConllevaRiesgoReputacional__c.field-meta.xml
<CustomField>
    <fullName>SPV_ConllevaRiesgoReputacional__c</fullName>
    <description>Campo picklist que indica si conlleva riesgo reputacional para Caixabank en el formulario de la reclamación</description>
    <inlineHelpText>¿La reclamación conlleva riesgo reputacional para CaixaBank?</inlineHelpText>
    <label>¿Conlleva riesgo reputacional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>