force-app/main/default/objects/SPV_Formulario__c/fields/SPV_CumplimientoCondicionesPactadas__c.field-meta.xml
<CustomField>
    <fullName>SPV_CumplimientoCondicionesPactadas__c</fullName>
    <description>Campo texto que indica el cumplimiento de las condiciones pactadas del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cumplimiento condiciones pactadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>