force-app/main/default/objects/SPV_Formulario__c/fields/SPV_DocumentacionNecesaria__c.field-meta.xml
<CustomField>
    <fullName>SPV_DocumentacionNecesaria__c</fullName>
    <description>Campo texto que indica la documentación necesaria del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicar la documentación necesaria para la defensa de la que no se dispone y justificar en su caso si se considera imprescindible para su defensa.</inlineHelpText>
    <label>Documentación necesaria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>