force-app/main/default/objects/SPV_Formulario__c/fields/SPV_EstadoNegociacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_EstadoNegociacion__c</fullName>
    <description>Campo que almacena el estado en el que se realizó la negociación de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado negociación</label>
    <type>TextArea</type>
</CustomField>