force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ExisteDefensaJuridicaSuficiente__c.field-meta.xml
<CustomField>
    <fullName>SPV_ExisteDefensaJuridicaSuficiente__c</fullName>
    <description>Campo picklist que indica si existe defensa jurídica suficiente en el formulario de la reclamación</description>
    <inlineHelpText>¿Existe defensa jurídica suficiente para la reclamación?</inlineHelpText>
    <label>¿Existe defensa jurídica suficiente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>