force-app/main/default/objects/SPV_Formulario__c/fields/SPV_FechaFinNegociacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_FechaFinNegociacion__c</fullName>
    <description>Campo que almacena la fecha en la que se finalizó la negociación de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha fin de negociación</label>
    <type>DateTime</type>
</CustomField>