force-app/main/default/objects/SPV_Formulario__c/fields/SPV_FechaRectificacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_FechaRectificacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Rectificacion</label>
    <type>DateTime</type>
</CustomField>