force-app/main/default/objects/SPV_Formulario__c/fields/SPV_Importe__c.field-meta.xml
<CustomField>
    <fullName>SPV_Importe__c</fullName>
    <description>Campo currency que indica el importe solicitado del formulario de la reclamación</description>
    <inlineHelpText>Importe solicitado</inlineHelpText>
    <label>Importe</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>