force-app/main/default/objects/SPV_Formulario__c/fields/SPV_InformacionPrecontractual__c.field-meta.xml
<CustomField>
    <fullName>SPV_InformacionPrecontractual__c</fullName>
    <description>Campo texto que indica la información precontractual del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Información precontractual</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>