force-app/main/default/objects/SPV_Formulario__c/fields/SPV_JustificantesOperaciones__c.field-meta.xml
<CustomField>
    <fullName>SPV_JustificantesOperaciones__c</fullName>
    <description>Campo texto que indica los justificantes de operaciones del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Justificantes de operaciones (órdenes de clientes)</inlineHelpText>
    <label>Justificantes de operaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>