force-app/main/default/objects/SPV_Formulario__c/fields/SPV_LetradoRevisor__c.field-meta.xml
<CustomField>
    <fullName>SPV_LetradoRevisor__c</fullName>
    <description>Campo texto que indica el letrado revisor del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Letrado revisor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>