force-app/main/default/objects/SPV_Formulario__c/fields/SPV_LetradoSPV__c.field-meta.xml
<CustomField>
    <fullName>SPV_LetradoSPV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LetradoSPV</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Formularios</relationshipLabel>
    <relationshipName>Formularios</relationshipName>
    <type>Lookup</type>
</CustomField>