force-app/main/default/objects/SPV_Formulario__c/fields/SPV_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>SPV_MotivoRechazo__c</fullName>
    <description>Campo que almacena el motivo de rechazo del escalado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de rechazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>