force-app/main/default/objects/SPV_Formulario__c/fields/SPV_MotivoRechazoNegociacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_MotivoRechazoNegociacion__c</fullName>
    <description>Campo que almacena el motivo de rechazo de la negociación de la reclamación</description>
    <label>Motivo rechazo negociación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SPV_TAEInsuficiente</fullName>
                <label>% TAE insuficiente, solicita más bajada</label>
            </value>
            <value>
                <fullName>SPV_NoDeseaNegociar</fullName>
                <label>No desea negociar, solo devolución íntegra</label>
            </value>
            <value>
                <fullName>SPV_SolicitaVerificarPrimero</fullName>
                <label>Solicita verificar primero, solo devolución íntegra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>