force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ObservacionesCriteriosBDE__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesCriteriosBDE__c</fullName>
    <description>Campo texto que indica las observaciones de los Criterios BDE del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones criterios BDE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>