force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ObservacionesDefensaJuridica__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesDefensaJuridica__c</fullName>
    <description>Campo texto que indica las observaciones de la defensa jurídica del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones defensa jurídica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>