force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ObservacionesExisteCriterio__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesExisteCriterio__c</fullName>
    <description>Campo texto que indica las observaciones sobre si criterio respecto a esta tipología o se conoce el sentido en que BdE resuelve esta tipología de reclamaciones del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones existe criterio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>