force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ObservacionesMalFuncionamiento__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesMalFuncionamiento__c</fullName>
    <description>Observaciones adicional respecto a si la reclamación ante el D.E.C hace referencia al mal funcionamiento de SAC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones mal funcionamiento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>