force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ObservacionesRiesgoReputacional__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesRiesgoReputacional__c</fullName>
    <description>Campo texto que indica las observaciones del riesgo reputacional del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones riesgo reputacional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>