force-app/main/default/objects/SPV_Formulario__c/fields/SPV_PropuestaLetradoAlegaciones__c.field-meta.xml
<CustomField>
    <fullName>SPV_PropuestaLetradoAlegaciones__c</fullName>
    <description>Campo picklist que indica la propuesta del letrado de alegaciones del formulario de la reclamación</description>
    <label>Propuesta del letrado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alegación</fullName>
            </value>
            <value>
                <fullName>Inadmisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>