force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ReclamacionMalFuncionamiento__c.field-meta.xml
<CustomField>
    <fullName>SPV_ReclamacionMalFuncionamiento__c</fullName>
    <description>Campo picklist que indica si la reclamación ante el D.E.C. hace referencia expresa al mal funcionamiento del SAC del formulario de la reclamación</description>
    <inlineHelpText>¿La reclamación ante el D.E.C. hace referencia expresa al mal funcionamiento del SAC?</inlineHelpText>
    <label>Reclamación D.E.C mal funcionamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>