force-app/main/default/objects/SPV_Formulario__c/fields/SPV_Reclamante__c.field-meta.xml
<CustomField>
    <fullName>SPV_Reclamante__c</fullName>
    <description>Nombre y DNI/NIF del reclamante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reclamante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>