force-app/main/default/objects/SPV_Formulario__c/fields/SPV_RecomendacionesAbogados__c.field-meta.xml
<CustomField>
    <fullName>SPV_RecomendacionesAbogados__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recomendaciones a abogados externos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>