force-app/main/default/objects/SPV_Formulario__c/fields/SPV_RectificacionCompletada__c.field-meta.xml
<CustomField>
    <fullName>SPV_RectificacionCompletada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rectificacion completada</label>
    <type>Checkbox</type>
</CustomField>