force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ResolucionRemitidaEnPlazo__c.field-meta.xml
<CustomField>
    <fullName>SPV_ResolucionRemitidaEnPlazo__c</fullName>
    <description>Campo picklist que indica si la resolucion ha sido remitida en plazo en el formulario de la reclamación</description>
    <inlineHelpText>¿La resolución SAC se remitió al cliente dentro de plazo?</inlineHelpText>
    <label>Resolución remitida en plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>