force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ResultadoNegociacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_ResultadoNegociacion__c</fullName>
    <description>Campo que almacena el resultado de la negociación realizada en la reclamación</description>
    <label>Resultado de negociación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acuerdo aceptado</fullName>
            </value>
            <value>
                <fullName>Acuerdo rechazado</fullName>
            </value>
            <value>
                <fullName>Acuerdo revocado</fullName>
            </value>
            <value>
                <fullName>Cliente no localizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>