force-app/main/default/objects/SPV_Formulario__c/fields/SPV_ResumenResolucion__c.field-meta.xml
<CustomField>
    <fullName>SPV_ResumenResolucion__c</fullName>
    <description>Campo texto que indica el resumen de resolución SAC del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resumen resolución SAC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>