force-app/main/default/objects/SPV_Formulario__c/fields/SPV_RiesgoInformeDesfavorable__c.field-meta.xml
<CustomField>
    <fullName>SPV_RiesgoInformeDesfavorable__c</fullName>
    <description>Campo picklist que indica si hay riesgo de informe desfavorable del formulario de la reclamación</description>
    <label>¿Hay riesgo de informe desfavorable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>