force-app/main/default/objects/SPV_Formulario__c/fields/SPV_Riesgos__c.field-meta.xml
<CustomField>
    <fullName>SPV_Riesgos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Riesgos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>