force-app/main/default/objects/SPV_Formulario__c/fields/SPV_TipoRespuesta__c.field-meta.xml
<CustomField>
    <fullName>SPV_TipoRespuesta__c</fullName>
    <description>Campo texto que indica el tipo de respuesta del formulario de la reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de respuesta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>