force-app/main/default/objects/SPV_Formulario__c/recordTypes/SAC_Formulario_Fraude.recordType-meta.xml
<RecordType>
    <fullName>SAC_Formulario_Fraude</fullName>
    <active>true</active>
    <label>Formulario Fraude</label>
</RecordType>