force-app/main/default/objects/SPV_Formulario__c/recordTypes/SAC_Formulario_GGH.recordType-meta.xml
<RecordType>
    <fullName>SAC_Formulario_GGH</fullName>
    <active>true</active>
    <label>Formulario GGH</label>
</RecordType>