force-app/main/default/objects/SPV_Formulario__c/recordTypes/SPV_Formulario.recordType-meta.xml
<RecordType>
    <fullName>SPV_Formulario</fullName>
    <active>true</active>
    <description>Record Type del objeto SPV_Formulario para el proyecto supervisores.</description>
    <label>Formulario SPV</label>
</RecordType>