force-app/main/default/objects/SPV_Formulario__c/recordTypes/SPV_FormularioNegociacion.recordType-meta.xml
<RecordType>
    <fullName>SPV_FormularioNegociacion</fullName>
    <active>true</active>
    <description>Record type que almacena las negociaciones existentes de la reclamación</description>
    <label>Formulario Negociación</label>
</RecordType>