force-app/main/default/objects/SPV_Formulario__c/recordTypes/SPV_FormularioRectificacion.recordType-meta.xml
<RecordType>
    <fullName>SPV_FormularioRectificacion</fullName>
    <active>true</active>
    <label>Formulario Rectificacion SPV</label>
</RecordType>